<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Tippy"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tvBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/tv_hint_bottom"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDeposit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="250dp"
        android:text="@string/tv_deposit"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tv_percent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/tvDeposit"
        app:layout_constraintTop_toBottomOf="@+id/tvDeposit" />

    <TextView
        android:id="@+id/tvCommission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tv_commission"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/tvPercent"
        app:layout_constraintTop_toBottomOf="@+id/tvPercent" />

    <TextView
        android:id="@+id/tvSumma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tv_summa"
        app:layout_constraintEnd_toEndOf="@+id/tvCommission"
        app:layout_constraintTop_toBottomOf="@+id/tvCommission" />

    <EditText
        android:id="@+id/tvEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:text="@string/edTextValue"
        app:layout_constraintBottom_toBottomOf="@+id/tvDeposit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvDeposit"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:max="40"
        app:layout_constraintBottom_toBottomOf="@+id/tvPercent"
        app:layout_constraintStart_toStartOf="@+id/tvEditText"
        app:layout_constraintTop_toTopOf="@+id/tvPercent" />

    <TextView
        android:id="@+id/tvCommissionValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_comission_value"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/tvCommission"
        app:layout_constraintStart_toStartOf="@+id/seekBar"
        app:layout_constraintTop_toTopOf="@+id/tvCommission" />

    <TextView
        android:id="@+id/tvSummaValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_summa_value"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/tvSumma"
        app:layout_constraintStart_toStartOf="@+id/tvCommissionValue"
        app:layout_constraintTop_toTopOf="@+id/tvSumma" />

    <TextView
        android:id="@+id/tvLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_level1"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>